--- a/index.html
+++ b/index.html
@@ -8,23 +8,20 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
 
-<body>
- <header>
- <h1>Jobs Searching</h1>
- </header>
- <main>
- <div class="searchBar">
- <label>Titolo</label>
- <input type="text" id="title"/>
- <label>Location</label>
- <input type="text" id="location"/>
- <button>cerca</button>
- </div>
- <div>
- </div>
- </main>
- <script src="./parte_due.js"></script>
-</body>
-
-
+  <body>
+    <header>
+      <h1>Jobs Searching</h1>
+    </header>
+    <main>
+      <div class="searchBar">
+        <label>Titolo</label>
+        <input type="text" id="title" />
+        <label>Location</label>
+        <input type="text" id="location" />
+        <button>cerca</button>
+      </div>
+      <div class="content"></div>
+    </main>
+    <script src="./parte_due.js"></script>
+  </body>
 </html>
