--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Jobs</title>
     <link rel="stylesheet" href="./index.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Playpen+Sans&display=swap");
+    </style>
   </head>
 
   <body>
     <header>
-      <h1>Jobs Searching</h1>
+      <h1>JOB SEARCHING</h1>
     </header>
     <main>
       <div class="searchBar">
-        <label>Titolo</label>
+        <label>Title</label>
         <input type="text" id="title" />
         <label>Location</label>
         <input type="text" id="location" />
-        <button>cerca</button>
+        <button>search</button>
       </div>
       <div class="content"></div>
     </main>
